--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.feature.2d": "2.0.0",
     "com.unity.ide.rider": "3.0.31",
     "com.unity.performance.profile-analyzer": "1.2.2",
     "com.unity.ugui": "2.0.0",
